# ab-backend

./: airbnb-clone.md  manage.py  pyproject.toml  render.yaml
bookings/: models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: permissions.py  schema.py  settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_message_room_alter_message_user.py
experiences/: admin.py  models.py
experiences/migrations/: 0001_initial.py  0002_initial.py  0003_alter_experience_category_alter_experience_host_and_more.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_review_rating.py  0005_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0003_alter_room_amenities_alter_room_category_and_more.py
rooms/templates/: all_rooms.html  room_detail.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  (+1 more)
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+3 files in other folders)
